--- a/templates/pet_list_home.html
+++ b/templates/pet_list_home.html
@@ -1,28 +1,37 @@
 {% extends "base.html" %} {% block title %}Pet List Home{% endblock %} {% block
 main %}
 <h1 class="text-center">Adopt A Pet Homepage</h1>
+<br />
 <div class="container mx-auto">
-<table class="table table-striped table-bordered table-hover">
-  <thead class="thead-dark">
-    <tr class="text-center">
-      <th scope="col">Pet Name</th>
-      <th scope="col">Pet Species</th>
-      <th scope="col">Picture</th>
-      <th scope="col">Age</th>
-      <th scope="col">Available?</th>
-    </tr>
-  </thead>
-  <tbody>
-    {% for pet in pets %}
-    <tr class="text-center">
-      <td>{{pet.name}}</td>
-      <td>{{pet.species}}</td>
-      <td><img src="{{pet.photo_url}}" style="height: 50px; width: 50px"/></td>
-      <td>{{pet.age}}</td>
-      <td>{% if pet.available %}<strong>{{pet.available}}</strong>{% else %}{{pet.available}}{% endif %}</td>
-    </tr>
-    {% endfor %}
-  </tbody>
-</table>
+  <table class="table table-striped table-bordered table-hover">
+    <thead class="thead-dark">
+      <tr class="text-center">
+        <th scope="col">Pet Name</th>
+        <th scope="col">Pet Species</th>
+        <th scope="col">Picture</th>
+        <th scope="col">Age</th>
+        <th scope="col">Available?</th>
+      </tr>
+    </thead>
+    <tbody>
+      {% for pet in pets %}
+      <tr class="text-center">
+        <td>{{pet.name}}</td>
+        <td>{{pet.species}}</td>
+        <td>
+          <img src="{{pet.photo_url}}" style="height: 50px; width: 50px" />
+        </td>
+        <td>{{pet.age}}</td>
+        <td>
+          {% if pet.available %}<strong>{{pet.available}}</strong>{% else
+          %}{{pet.available}}{% endif %}
+        </td>
+      </tr>
+      {% endfor %}
+    </tbody>
+  </table>
 </div>
+<form action="/add">
+    <input type="submit" class="btn btn-success" value="Add A Pet">
+</form>
 {% endblock %}
