refactored the pet_list_home.html add button

--- a/templates/pet_list_home.html
+++ b/templates/pet_list_home.html
@@ -30,8 +30,11 @@ main %}
       {% endfor %}
     </tbody>
   </table>
+  <div class="container">
+  <form action="/add" class="mx-auto">
+    <input type="submit" class="btn btn-success form-control" value="Add A Pet">
 </div>
-<form action="/add">
-    <input type="submit" class="btn btn-success" value="Add A Pet">
 </form>
+</div>
+
 {% endblock %}
