--- a/templates/add_pet.html
+++ b/templates/add_pet.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %} {% block title %}Add A Pet Form{% endblock %} {% block
 main %}
-<h1 class="text-center">Add A Pet</h1>
+<h1 class="display-4 text-center">Add A Pet</h1>
+<div class="container-fluid mx-auto">
 <div class="container">
   <form method="POST">
     {{ form.hidden_tag() }} {% for field in form if field.widget.input_type !=
@@ -9,7 +10,9 @@ main %}
     mx-auto") }} {% for error in field.errors %}
     <span class="alert alert-danger"> {{ error }} </span>
     {% endfor %} {% endfor %}
+    <br>
     <input type="submit" class="form-control btn btn-success" value="Submit Pet" />
   </form>
+</div>
 </div>
 {% endblock %}
