--- a/templates/pet_list_home.html
+++ b/templates/pet_list_home.html
@@ -16,15 +16,15 @@ main %}
     <tbody>
       {% for pet in pets %}
       <tr class="text-center">
-        <td>{{pet.name}}</td>
+        <td><a href="/{{pet.id}}">{{pet.name}}</a></td>
         <td>{{pet.species}}</td>
         <td>
-          <img src="{{pet.photo_url}}" style="height: 50px; width: 50px" />
+          <img src="{{pet.photo_url or 'https://www.publicdomainpictures.net/pictures/150000/nahled/pet-silhouette-icons.jpg' }}" style="height: 50px; width: 50px" />
         </td>
         <td>{{pet.age}}</td>
         <td>
-          {% if pet.available %}<strong>{{pet.available}}</strong>{% else
-          %}{{pet.available}}{% endif %}
+          {% if pet.available %}<strong>Yes</strong>{% else
+          %}No{% endif %}
         </td>
       </tr>
       {% endfor %}
