refactored code to make more concise

--- a/templates/pet_list_home.html
+++ b/templates/pet_list_home.html
@@ -19,7 +19,7 @@ main %}
         <td><a href="/{{pet.id}}">{{pet.name}}</a></td>
         <td>{{pet.species}}</td>
         <td>
-          <img src="{{pet.photo_url or 'https://www.publicdomainpictures.net/pictures/150000/nahled/pet-silhouette-icons.jpg' }}" style="height: 50px; width: 50px" />
+          <img src="{{pet.photo_url or 'https://www.publicdomainpictures.net/pictures/150000/nahled/pet-silhouette-icons.jpg' }}" style="max-width: 250px"/>
         </td>
         <td>{{pet.age}}</td>
         <td>
